--- a/QA_Scanner/packages.config
+++ b/QA_Scanner/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DocX" version="1.1.0" targetFramework="net46" />
+  <package id="Selenium.WebDriver" version="3.12.1" targetFramework="net46" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.40.0" targetFramework="net46" />
 </packages>
