--- a/QA_Scanner/QA_Scanner.csproj
+++ b/QA_Scanner/QA_Scanner.csproj
@@ -57,26 +57,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomMessageBox.cs">
+    <Compile Include="Models\StringHelper.cs" />
+    <Compile Include="Views\CustomMessageBox.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CustomMessageBox.Designer.cs">
+    <Compile Include="Views\CustomMessageBox.Designer.cs">
       <DependentUpon>CustomMessageBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="HotKey.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="Models\HotKey.cs" />
+    <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Views\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Subjects.cs" />
-    <EmbeddedResource Include="CustomMessageBox.resx">
+    <Compile Include="Models\Subjects.cs" />
+    <EmbeddedResource Include="Views\CustomMessageBox.resx">
       <DependentUpon>CustomMessageBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="Views\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -88,10 +89,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="assets\ecology_1_2018.docx" />
-    <None Include="assets\ecology_2_2018.docx" />
-    <None Include="assets\english_2018.docx" />
-    <None Include="assets\structure_2018.docx" />
+    <None Include="Resources\Ecology_1_2018.docx" />
+    <None Include="Resources\Ecology_2_2018.docx" />
+    <None Include="Resources\English_2018.docx" />
+    <None Include="Resources\DataStructure_2018.docx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -136,7 +137,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="assets\PhysicsQA_2018.txt" />
+    <Content Include="Resources\PhysicsQA_2018.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.2.40.0\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.2.40.0\build\Selenium.WebDriver.ChromeDriver.targets')" />
