--- a/QA_Scanner/QA_Scanner.csproj
+++ b/QA_Scanner/QA_Scanner.csproj
@@ -90,10 +90,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Resources\Ecology_1_2018.docx" />
-    <None Include="Resources\Ecology_2_2018.docx" />
-    <None Include="Resources\English_2018.docx" />
-    <None Include="Resources\DataStructure_2018.docx" />
+    <None Include="Documents\ComputerNetwork_2019.docx" />
+    <None Include="Documents\Ecology_1_2018.docx" />
+    <None Include="Documents\Ecology_2_2018.docx" />
+    <None Include="Documents\English_2018.docx" />
+    <None Include="Documents\DataStructure_2018.docx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -138,7 +139,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\PhysicsQA_2018.txt" />
+    <Content Include="Documents\PhysicsQA_2018.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.2.40.0\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.2.40.0\build\Selenium.WebDriver.ChromeDriver.targets')" />
