--- a/src/QA_Scanner_Old/packages.config
+++ b/src/QA_Scanner_Old/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DocX" version="1.2.1" targetFramework="net46" />
+  <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.45.0" targetFramework="net46" />
 </packages>
