--- a/src/QA_Scanner_MVVM/packages.config
+++ b/src/QA_Scanner_MVVM/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Awesomium.NetWrapper.Unofficial.fix" version="1.7.5.01" targetFramework="net452" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net452" />
   <package id="DocX" version="1.3.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net452" />
