--- a/src/QA_Scanner_MVVM/packages.config
+++ b/src/QA_Scanner_MVVM/packages.config
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Awesomium.NetWrapper.Unofficial.fix" version="1.7.5.01" targetFramework="net452" />
-  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net452" />
-  <package id="DocX" version="1.3.0" targetFramework="net452" />
-  <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net452" />
-  <package id="Prism.Core" version="7.2.0.1367" targetFramework="net452" />
-  <package id="Prism.Unity" version="7.2.0.1367" targetFramework="net452" />
-  <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net452" />
-  <package id="Selenium.Chrome.WebDriver" version="75.0.0" targetFramework="net452" />
-  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
-  <package id="Unity.Abstractions" version="4.1.3" targetFramework="net452" />
-  <package id="Unity.Container" version="5.10.3" targetFramework="net452" />
+  <package id="Awesomium.NetWrapper.Unofficial.fix" version="1.7.5.01" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net45" />
+  <package id="DocX" version="1.3.0" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net45" />
+  <package id="NAudio" version="1.9.0" targetFramework="net45" />
+  <package id="Prism.Core" version="7.2.0.1367" targetFramework="net45" />
+  <package id="Prism.Unity" version="7.2.0.1367" targetFramework="net45" />
+  <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net45" />
+  <package id="Selenium.Chrome.WebDriver" version="75.0.0" targetFramework="net45" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
+  <package id="Unity.Abstractions" version="4.1.3" targetFramework="net45" />
+  <package id="Unity.Container" version="5.10.3" targetFramework="net45" />
 </packages>
