--- a/src/SpeechRecognitionCore/SpeechRecognitionCore.vcxproj
+++ b/src/SpeechRecognitionCore/SpeechRecognitionCore.vcxproj
@@ -156,7 +156,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AzureSpeech.h" />
+    <ClInclude Include="azure_speech.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
