added app settings

--- a/src/QA_Scanner_MVVM/QA_Scanner_MVVM.csproj
+++ b/src/QA_Scanner_MVVM/QA_Scanner_MVVM.csproj
@@ -111,6 +111,9 @@
     <Reference Include="NAudio, Version=1.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NAudio.1.9.0\lib\net35\NAudio.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Prism, Version=7.2.0.1367, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Prism.Core.7.2.0.1367\lib\net45\Prism.dll</HintPath>
     </Reference>
@@ -165,11 +168,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Models\AppSettings.cs" />
     <Compile Include="Services\Automation.cs" />
     <Compile Include="PlatformSpecific\HotKey.cs" />
     <Compile Include="Services\ISpeechRecognitionService.cs" />
     <Compile Include="Services\LoopbackRecord.cs" />
-    <Compile Include="Services\SettingsXml.cs" />
     <Compile Include="Services\AzureSpeechRecognition.cs" />
     <Compile Include="Services\Subject.cs" />
     <Compile Include="ViewModels\ManuallyModeViewModel.cs" />
@@ -256,6 +259,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
