--- a/src/QA_Scanner_MVVM/packages.config
+++ b/src/QA_Scanner_MVVM/packages.config
@@ -5,6 +5,7 @@
   <package id="DocX" version="1.3.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net45" />
   <package id="NAudio" version="1.9.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
   <package id="Prism.Core" version="7.2.0.1367" targetFramework="net45" />
   <package id="Prism.Unity" version="7.2.0.1367" targetFramework="net45" />
   <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net45" />
